MTU from the limitations of Steven's ESP32 (This would need to be addressed since MTU cant be changed on Iphone). IP addresses for Team22Router network (would be URL in practical setting). Debugging/print statements added to middle-man for integration process

--- a/middle-man/Dockerfile
+++ b/middle-man/Dockerfile
@@ -10,5 +10,7 @@ EXPOSE 5000
 
 ENV FLASK_APP=app.py
 ENV FLASK_RUN_HOST=0.0.0.0
+ENV FLASK_DEBUG=1
+ENV FLASK_ENV=development
 
 CMD ["flask", "run"]
